Small updates with Diana

--- a/about.html
+++ b/about.html
@@ -41,6 +41,7 @@
                     <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="music-eng.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Music & Engineering</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="/music-eng-subpages/overview.html">Overview</a></li>
                         <li><a class="dropdown-item" href="music-eng-subpages/cantovario.html">CantoVario</a></li>
                         <li><a class="dropdown-item" href="music-eng-subpages/engineers-orch.html">Engineers' Orchestra</a></li>
                         <li><a class="dropdown-item" href="music-eng-subpages/publication-science.html">Publication in Science</a></li>
