--- a/olin-subpages/ece.html
+++ b/olin-subpages/ece.html
@@ -59,6 +59,7 @@
                     id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">Music & Engineering</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="../music-eng-subpages/overview.html">Overview</a></li>
                         <li><a class="dropdown-item"
                         href="../music-eng-subpages/cantovario.html">CantoVario</a></li>
                         <li><a class="dropdown-item"
@@ -145,13 +146,14 @@
         </div>
         
         <div>
+            <img src="../images/olin-images/ece-msynth.png" class="rounded float-end" style="height: 250px; margin-left: 10px">
+
             <p><span class="bold">In sum, </span>as a disciplinary ECE course, DSP develops students through three overarching themes:  lifelong learning, intrinsic motivation, and the creative process (stimulation/impetus, preparation/scaffolding, applications, feedback, revision, and effective communication).  As part of the ECE core curriculum, it has helped build & sustain the college, contributing to the ABET accreditation process.</p>
 
             <p>Please see the following Supplementary Materials: <a href="../docs/supplementary-materials/olin-supplementary/ece-curriculum/II-B-1A-DSP-schedule.pdf">Fall 2016 course schedule,</a> <a href="../docs/supplementary-materials/olin-supplementary/ece-curriculum/II-B-1B-DSP-example-material.pdf">example course material, </a> and <a href="../docs/supplementary-materials/olin-supplementary/ece-curriculum/II-B-1C-DSP-developed-topics.pdf">a listing of topics</a> delivered by 48 course materials I developed for DSP students, based on the last iteration of this course.</p>
 
             <p><a href="../docs/supplementary-materials/olin-supplementary/ece-curriculum/A-II-B-1-DSP-example-work.pdf">This document</a> contains examples of DSP assignments, labs, and student work, including a student’s final project, M-synth.</p>
 
-            <img src="../images/olin-images/ece-msynth.png">
             <p class="caption"> Graphical interface built for M-synth, a final project in DSP.</p>
         </div>
 
