--- a/music-eng-subpages/engineers-orch.html
+++ b/music-eng-subpages/engineers-orch.html
@@ -32,15 +32,16 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Music</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="../musical-works.html">Musical Works</a></li>
-                          <li><a class="dropdown-item" href="../orch-arrangements.html">Orchestral Arrangements</a></li>
-                          <li><a class="dropdown-item" href="../scores.html">Scores</a></li>
-                        </ul>
+                            <li><a class="dropdown-item" href="../music-subpages/musical-works.html">Musical Works</a></li>
+                            <li><a class="dropdown-item" href="../music-subpages/orch-arrangements.html">Orchestral Arrangements</a></li>
+                            <li><a class="dropdown-item" href="../music-subpages/scores.html">Scores</a></li>
+                          </ul>
                       </li>
 
                     <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Music & Engineering</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="../music-eng-subpages/overview.html">Overview</a></li>
                         <li><a class="dropdown-item" href="cantovario.html">CantoVario</a></li>
                         <li><a class="dropdown-item" href="engineers-orch.html">Engineers' Orchestra</a></li>
                         <li><a class="dropdown-item" href="grants.html">Grants</a></li>
