--- a/olin-subpages/music-program.html
+++ b/olin-subpages/music-program.html
@@ -59,6 +59,7 @@
                     id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">Music & Engineering</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="../music-eng-subpages/overview.html">Overview</a></li>
                         <li><a class="dropdown-item"
                         href="../music-eng-subpages/cantovario.html">CantoVario</a></li>
                         <li><a class="dropdown-item"
