More small changes

--- a/music-subpages/scores.html
+++ b/music-subpages/scores.html
@@ -115,6 +115,8 @@
     <div class="container">
         <h1 class="mt-4">Scores</h1>
 
+        <p>This breakdown of one of my compositions, <a href="../docs/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-4-september-quartet.pdf"
+            target="_blank"><i>September Quartet (2011)</i></a>, gives a peek into one of my works.</p>
     </div>
   </body>
 </html>
