--- a/olin-subpages/music-program.html
+++ b/olin-subpages/music-program.html
@@ -123,6 +123,20 @@
 
             <p>Music is a vital tradition at Olin, reminding us of the multiple intelligences our students bring to the community and beyond. Every year, Olin student club groups such as PowerChords, Olin Jazz Orchestra, and the Olin Rock Orchestra, as well as course groups such as the Wired Ensemble, Olin Conductorless Orchestra, and students in the AHS Capstone perform myriad concerts. A complete listing of concerts arising from my courses and other work can be found in <a href="../docs/supplementary-materials/olin-supplementary/music-program/A-IV-L-concerts.pdf">Concerts at Olin (Fall 2002 – Spring 2024).</a></p>
 
+            <p>A sampling of recorded performances from Olin's earliest years can be listened to at these following links.</p>
+
+            <ul>
+                <li><a href="https://soundcloud.com/olin-music-32816230/piano-trio-in-b-major-gantz?in=olin-music-32816230/sets/may-1-3-2003-music-at-olin">Brahms Piano Trio in B Major, 1st movement:</a> Allegro con brio (Jay Gantz, cello; Diana Dabby, piano)</li>
+
+                <li><a href="https://soundcloud.com/olin-music-32816230/rhapsody-in-blue-bu?in=olin-music-32816230/sets/may-1-3-2003-music-at-olin">2002-03 OCO Plays Rhapsody in Blue</a></li>
+
+                <li><a href="https://soundcloud.com/olin-music-32816230/sonata-for-cello-and-piano-in?in=olin-music-32816230/sets/may-1-3-2003-music-at-olin">Shostakovich Cello Sonata in D Minor, 2nd movement:</a> Allegro (Jay Gantz, cello; Diana Dabby, piano)</li>
+
+                <li><a href="https://soundcloud.com/olin-music-32816230/sonatine-for-bassoon-and-piano?in=olin-music-32816230/sets/may-1-3-2003-music-at-olin">Alexnadre Tansman Sonatine for Bassoon and Piano, 2nd movement:</a> Ario - Largo contabile (Janet Tsai, bassoon; Diana Dabby, piano)</li>
+
+                <li><a href="https://soundcloud.com/olin-music-32816230/sets/may-1-3-2003-music-at-olin">May 1-3, 2003 Olin concert</a></li>
+            </ul>
+
             <p>Building the Music Program at Olin from inception to the present time required all musical parts of me: composer, arranger, concert pianist, theorist, performer, and writer. What I didn’t know, I learned on the job or I taught myself. It’s been an amazing journey, exciting and creative. There’s also been a lot of behind the scenes work to ensure its sustainability. There are many, many people to thank—something I enjoy doing on the last page of every program. So here are those names from programs during 2018-19.</p>
 
             <span style="margin-left: 90px; margin-right: 90px;">
