--- a/music-subpages/orch-arrangements.html
+++ b/music-subpages/orch-arrangements.html
@@ -59,7 +59,8 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item"
                         <li><a class="dropdown-item" href="../music-eng-subpages/overview.html">Overview</a></li>
-                        href="../music-eng-subpages/cantovario.html">CantoVario</a></li>
+                        <li><a class="dropdown-item"
+                            href="../music-eng-subpages/cantovario.html">CantoVario</a></li>
                         <li><a class="dropdown-item"
                         href="../music-eng-subpages/engineers-orch.html">Engineers'
                         Orchestra</a></li>
@@ -159,7 +160,7 @@
         <p>Here is a short summary of my process for creating orchestral
         arrangements for the Olin Conductorless Orchestra. (The specific
         re-orchestrations mentioned below are elaborated further in <a
-        href="../docs/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-3-yearly-arrangements.pdf"
+        href="../docs/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-1-orchestral-arrangements.pdf"
         target="_blank">this document</a>).</b></p>
 
 
@@ -287,13 +288,11 @@
             href="../docs/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-1-orchestral-arrangements.pdf"target="_blank">This document</a> examines eight of my orchestral
             arrangements, showing how I created stylistic consistency and a coherent
             group sound for OCO despite eclectic instrumentation and unbalanced
-            wind, brass, and string sections.  Scores of these orchestral
-            arrangements can be found in <a
+            wind, brass, and string sections. <a
             href="../docs/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-2-arrangement-scores.pdf"
-            target="_blank">this document</a>.</p>
+            target="_blank">Access scores of these orchestral
+            arrangements.</a></p>
 
-            <p>This breakdown of one of my compositions, <a href="../docs/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-4-september-quartet.pdf"
-                target="_blank"><i>September Quartet (2011)</i></a>, gives a peek into one of my works.</p>
             <p><b>In sum</b>, by creating orchestral arrangements for the Olin
             Conductorless Orchestra, I sought to not only establish its viability but also support goals of developing students, providing external impact, and
             building & sustaining the College (Map 1).  These arrangements enabled
