Finished up smaller things

--- a/music-subpages/orch-arrangements.html
+++ b/music-subpages/orch-arrangements.html
@@ -308,7 +308,7 @@
             themes in producing these arrangements, thus elaborating upon Map 3.
             </p>
 
-            <img class="center-img" src="../images/music-images/orch-arrangements-chart.JPG">
+            <img class="center-img" src="../images/music-images/orch-arrangements-chart.JPG" style="height: 700px">
     </div>
   </body>
 </html>
