--- a/music-subpages/scores.html
+++ b/music-subpages/scores.html
@@ -115,8 +115,50 @@
     <div class="container">
         <h1 class="mt-4">Scores</h1>
 
-        <p>This breakdown of one of my compositions, <a href="../docs/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-4-september-quartet.pdf"
-            target="_blank"><i>September Quartet (2011)</i></a>, gives a peek into one of my works.</p>
+        <p><a href="../docs/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-4-september-quartet.pdf" target="_blank">Scores</a> for the following works can be found below: </p>
+        <ul>
+            <li><i><strong>September Quartet</strong> (2011)</i></li>
+
+            <ol>
+                <li>Beginning</li>
+                <li>77-175</li>
+                <li>93</li>
+                <li>11</li>
+                <li>End</li>
+            </ol>
+
+            <li><i><strong>Tre Studi di Colore</strong> for piano (2012)</i></li>
+
+            <ol>
+                <li>Azzurro (for right hand alone)</li>
+                <li>Rosso (for left hand alone)</li>
+                <li>Violetto (for two hands) </li>
+            </ol>
+
+            <li><i><strong>Fuente y Variacion</strong> (2013)</i></li>
+
+            <li><i><strong>Who was Wissam Eid?</strong> (2017)</i></li>
+
+            <ol>
+                <li>Ahmad Abu Adass</li>
+                <li>Rafik Hariri</li>
+                <li>Wissam Eid</li>
+            </ol>
+
+            <li><i><strong>Parallel Lives-Distant Mirrors</strong> for piano, flute, voice, and soundscape (2018)</i></li>
+
+            <ol>
+                <li>Ignition (solo piano), at minute 05:25 of the YouTube precording</li>
+                <li>The Last Minutes of Baghdad TV (bass and alto flutes + projection), at minute 15:28</li>
+                <li>An Iraqi Mother’s Lament (voice and piano), at minute 19:13</li>
+                <li>Quranic Verses 16:111 – 16:114 (speaker and alto flute), at minute 24:33</li>
+                <li>Catharsis (piano + soundscape), at minute 26:04</li> 
+            </ol>
+            
+            <li><i><strong>Earth Fire Water</strong> a Variation Concert for live acoustic piano and soundscape (2025)</i></li>
+
+        </ul>
+
     </div>
   </body>
 </html>
