--- a/olin-subpages/music-program.html
+++ b/olin-subpages/music-program.html
@@ -128,11 +128,13 @@
             <ul>
                 <li><a href="https://soundcloud.com/olin-music-32816230/piano-trio-in-b-major-gantz?in=olin-music-32816230/sets/may-1-3-2003-music-at-olin">Brahms Piano Trio in B Major, 1st movement:</a> Allegro con brio (Jay Gantz, cello; Diana Dabby, piano)</li>
 
-                <li><a href="https://soundcloud.com/olin-music-32816230/rhapsody-in-blue-bu?in=olin-music-32816230/sets/may-1-3-2003-music-at-olin">2002-03 OCO Plays Rhapsody in Blue</a></li>
+                <li><a href="https://soundcloud.com/olin-music-32816230/rhapsody-in-blue-bu?in=olin-music-32816230/sets/may-1-3-2003-music-at-olin">2002-03 OCO Plays Rhapsody in Blue by Gershwin</a></li>
 
                 <li><a href="https://soundcloud.com/olin-music-32816230/sonata-for-cello-and-piano-in?in=olin-music-32816230/sets/may-1-3-2003-music-at-olin">Shostakovich Cello Sonata in D Minor, 2nd movement:</a> Allegro (Jay Gantz, cello; Diana Dabby, piano)</li>
 
                 <li><a href="https://soundcloud.com/olin-music-32816230/sonatine-for-bassoon-and-piano?in=olin-music-32816230/sets/may-1-3-2003-music-at-olin">Alexnadre Tansman Sonatine for Bassoon and Piano, 2nd movement:</a> Ario - Largo contabile (Janet Tsai, bassoon; Diana Dabby, piano)</li>
+
+                <li><a href="https://soundcloud.com/search?q=beethoven%20gantz">Beethoven Sonata for cello and piano in G Minor, Op. 5, No. 2, 1st movement:</a> Adagio sostenuto e espressivo - Allegro molto più tosto presto (Jay Gantz, cello; Diana Dabby, piano)</li>
 
                 <li><a href="https://soundcloud.com/olin-music-32816230/sets/may-1-3-2003-music-at-olin">May 1-3, 2003 Olin concert</a></li>
             </ul>
